5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4000/executions/1798_2564.log
== TEST (2019-06-10 12:58:04) 
-- CODE:
from numpy import*
cont = (3, dtype=int)
gm = array(eval(input("Gols marcados: ")))
gs = array(eval(input("Gols sofridos: ")))
for i in range(size(gm)):
	if(gm[i] > gs[i]):
		cont[0] = cont[0] + 1
	elif(gm[i] = gs[i]):
		cont[1] = con[1] + 1
	elif(gm[i] < gs[i]):
		cont[2] = cont[2]+1
print(cont)
	

-- ERROR:
File "XXXX", line 2
    cont = (3, dtype=int)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 12:59:14) 
-- CODE:
from numpy import*
cont = (3, dtype=int)
gm = array(eval(input("Gols marcados: ")))
gs = array(eval(input("Gols sofridos: ")))
for i in range(size(gm)):
	if(gm[i] > gs[i]):
		cont[0] = cont[0] + 1
	elif(gm[i] == gs[i]):
		cont[1] = con[1] + 1
	elif(gm[i] < gs[i]):
		cont[2] = cont[2]+1
print(cont)

	

-- ERROR:
File "XXXX", line 2
    cont = (3, dtype=int)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 12:59:40) 
-- CODE:
from numpy import*
cont = zeros(3, dtype=int)
gm = array(eval(input("Gols marcados: ")))
gs = array(eval(input("Gols sofridos: ")))
for i in range(size(gm)):
	if(gm[i] > gs[i]):
		cont[0] = cont[0] + 1
	elif(gm[i] == gs[i]):
		cont[1] = con[1] + 1
	elif(gm[i] < gs[i]):
		cont[2] = cont[2]+1
print(cont)

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 13:00:26) 
-- CODE:
from numpy import*
cont = zeros(3, dtype=int)
gm = array(eval(input("Gols marcados: ")))
gs = array(eval(input("Gols sofridos: ")))
for i in range(size(gm)):
	if(gm[i] > gs[i]):
		cont[0] = cont[0] + 1
	elif(gm[i] == gs[i]):
		cont[1] = cont[1] + 1
	elif(gm[i] < gs[i]):
		cont[2] = cont[2]+1
print(cont)

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 13:00:53) 
-- CODE:
from numpy import*
cont = zeros(3, dtype=int)
gm = array(eval(input("Gols marcados: ")))
gs = array(eval(input("Gols sofridos: ")))
for i in range(size(gm)):
	if(gm[i] > gs[i]):
		cont[0] = cont[0] + 1
	elif(gm[i] == gs[i]):
		cont[1] = cont[1] + 1
	elif(gm[i] < gs[i]):
		cont[2] = cont[2]+1
print(cont)

	

-- EXECUTION TIME:
0.991228
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
